--- a/src/main/resources/templates/admin/logs.html
+++ b/src/main/resources/templates/admin/logs.html
@@ -123,7 +123,7 @@
                 <th><i class="fa-solid fa-sort mx-2"></i>Contact No</th>
                 <th><i class="fa-solid fa-sort mx-2"></i>Email ID</th>
                 <th><i class="fa-solid fa-sort mx-2"></i>College</th>
-                <th><i class="fa-solid fa-sort mx-2"></i>Branch</th>
+<!--                <th><i class="fa-solid fa-sort mx-2"></i>Branch</th>-->
                 <th><i class="fa-solid fa-sort mx-2"></i>Semester</th>
                 <th><i class="fa-solid fa-sort mx-2"></i>Degree</th>
                 <th><i class="fa-solid fa-sort mx-2"></i>Domain</th>
@@ -137,7 +137,7 @@
                 <td th:text="${intern.contactNo}"></td>
                 <td th:text="${intern.email}"></td>
                 <td th:text="${intern.collegeName}"></td>
-                <td th:text="${intern.branch}"></td>
+<!--                <td th:text="${intern.branch}"></td>-->
                 <td th:text="${intern.semester}"></td>
                 <td th:text="${intern.degree}"></td>
                 <td th:text="${intern.domain}"></td>
