--- a/src/main/resources/templates/admin/add_fields.html
+++ b/src/main/resources/templates/admin/add_fields.html
@@ -43,9 +43,9 @@
 			<li class="nav-item"><a class="nav-link active" id="tab1"
 				href="javascript:void(0)" onclick="switchTab('form1', 'tab1')">Add
 					College</a></li>
-			<li class="nav-item"><a class="nav-link" id="tab2"
-				href="javascript:void(0)" onclick="switchTab('form2', 'tab2')">Add
-					Branch</a></li>
+<!--			<li class="nav-item"><a class="nav-link" id="tab2"-->
+<!--				href="javascript:void(0)" onclick="switchTab('form2', 'tab2')">Add-->
+<!--					Branch</a></li>-->
 			<li class="nav-item"><a class="nav-link" id="tab3"
 				href="javascript:void(0)" onclick="switchTab('form3', 'tab3')">Add
 					Domain</a></li>
@@ -146,72 +146,72 @@
 		</div>
 
 
-		<div class="form-container" id="form2">
-			<h2 class="mt-5">Add Branch</h2>
-			<div class="container mt-3 mb-5 p-5 border shadow">
-				<form action="/bisag/admin/add_branch" method="post">
-					<div class="form-group">
-						<label for="name">Branch Name:</label> <input type="text"
-							class="form-control" id="field2" name="name">
-					</div>
-					<button type="submit" class="btn btn-primary">Submit</button>
-				</form>
-			</div>
+<!--		<div class="form-container" id="form2">-->
+<!--			<h2 class="mt-5">Add Branch</h2>-->
+<!--			<div class="container mt-3 mb-5 p-5 border shadow">-->
+<!--				<form action="/bisag/admin/add_branch" method="post">-->
+<!--					<div class="form-group">-->
+<!--						<label for="name">Branch Name:</label> <input type="text"-->
+<!--							class="form-control" id="field2" name="name">-->
+<!--					</div>-->
+<!--					<button type="submit" class="btn btn-primary">Submit</button>-->
+<!--				</form>-->
+<!--			</div>-->
 
-			<section class="section">
-				<div class="row">
-					<div class="col-lg-12">
+<!--			<section class="section">-->
+<!--				<div class="row">-->
+<!--					<div class="col-lg-12">-->
 
-						<div class="card">
-							<div class="card-body">
-								<h5 class="card-title">Datatables</h5>
-								<table>
-									class="table datatable table-bordered">
-									<thead>
-										<tr>
-											<th>Branch Name</th>
-											<th>Update</th>
-											<th>Delete</th>
-										</tr>
-									</thead>
-									<tbody>
-										<!-- Iterate over a list of colleges -->
-										<tr th:each="branch : ${branches}">
-											<form>
-												th:action="@{'/bisag/admin/update_branch/' + ${branch.branchId}}"
-												method="post">
-												<td><label>
-													<input type="text" th:value="${branch.name}"
-														name="name" class="no-border" />
-												</label></td>
+<!--						<div class="card">-->
+<!--							<div class="card-body">-->
+<!--								<h5 class="card-title">Datatables</h5>-->
+<!--								<table>-->
+<!--									class="table datatable table-bordered">-->
+<!--									<thead>-->
+<!--										<tr>-->
+<!--											<th>Branch Name</th>-->
+<!--											<th>Update</th>-->
+<!--											<th>Delete</th>-->
+<!--										</tr>-->
+<!--									</thead>-->
+<!--									<tbody>-->
+<!--										&lt;!&ndash; Iterate over a list of colleges &ndash;&gt;-->
+<!--										<tr th:each="branch : ${branches}">-->
+<!--											<form>-->
+<!--												th:action="@{'/bisag/admin/update_branch/' + ${branch.branchId}}"-->
+<!--												method="post">-->
+<!--												<td><label>-->
+<!--													<input type="text" th:value="${branch.name}"-->
+<!--														name="name" class="no-border" />-->
+<!--												</label></td>-->
 
-												<td>
-													<div class="button-container">
-														<button id="updateButton" class="btn btn-primary"
-															type="submit">Update</button>
-													</div>
-												</td>
-											</form>
+<!--												<td>-->
+<!--													<div class="button-container">-->
+<!--														<button id="updateButton" class="btn btn-primary"-->
+<!--															type="submit">Update</button>-->
+<!--													</div>-->
+<!--												</td>-->
+<!--											</form>-->
 
-											<td>
-												<div class="button-container">
-													<button id="deleteButton" class="btn btn-danger"
-														onclick="return confirm('Are you sure you want to delete this Branch ?')">
-														<a
-															th:href="@{/bisag/admin/delete_branch/{id}(id=${branch.branchId})}"
-															class="text-white">Delete</a>
-													</button>
-												</div>
-											</td>
-										</tr>
-									</tbody>
-								</table>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-		</div>
+<!--											<td>-->
+<!--												<div class="button-container">-->
+<!--													<button id="deleteButton" class="btn btn-danger"-->
+<!--														onclick="return confirm('Are you sure you want to delete this Branch ?')">-->
+<!--														<a-->
+<!--															th:href="@{/bisag/admin/delete_branch/{id}(id=${branch.branchId})}"-->
+<!--															class="text-white">Delete</a>-->
+<!--													</button>-->
+<!--												</div>-->
+<!--											</td>-->
+<!--										</tr>-->
+<!--									</tbody>-->
+<!--								</table>-->
+<!--							</div>-->
+<!--						</div>-->
+<!--					</div>-->
+<!--				</div>-->
+<!--			</section>-->
+<!--		</div>-->
 
 		<div class="form-container" id="form3">
 			<h2 class="mt-5">Add Domain</h2>
