--- a/src/main/resources/templates/admin/generate_intern_report.html
+++ b/src/main/resources/templates/admin/generate_intern_report.html
@@ -75,14 +75,14 @@
 									th:value="${domain.name}"></option>
 						</select>
 						</div>
-						<div class="form-group col-md-4">
-							<label for="branch" class="form-label">Select
-								Branch:</label> <select class="form-select" id="branch" name="branch" required>
-							<option value="All" selected>All</option>
-							<option th:each="branch : ${branches}" th:text="${branch.name}"
-									th:value="${branch.name}"></option>
-						</select>
-						</div>
+<!--						<div class="form-group col-md-4">-->
+<!--							<label for="branch" class="form-label">Select-->
+<!--								Branch:</label> <select class="form-select" id="branch" name="branch" required>-->
+<!--							<option value="All" selected>All</option>-->
+<!--							<option th:each="branch : ${branches}" th:text="${branch.name}"-->
+<!--									th:value="${branch.name}"></option>-->
+<!--						</select>-->
+<!--						</div>-->
 						<div class="form-group col-md-4">
 							<label for="degree" class="form-label">Select
 								Degree:</label> <select class="form-select" id="degree" name="degree" required>
