--- a/src/main/resources/templates/admin/intern_detail.html
+++ b/src/main/resources/templates/admin/intern_detail.html
@@ -107,15 +107,15 @@
 
 					</select></td>
 				</tr>
-				<tr>
-					<th>Branch</th>
-					<td><select class="form-select" id="branch" name="branch">
-						<option th:each="branch : ${branches}" th:text="${branch.name}"
-								th:value="${branch.name}"
-								th:selected="${branch.name == intern.get().branch}"></option>
+<!--				<tr>-->
+<!--					<th>Branch</th>-->
+<!--					<td><select class="form-select" id="branch" name="branch">-->
+<!--						<option th:each="branch : ${branches}" th:text="${branch.name}"-->
+<!--								th:value="${branch.name}"-->
+<!--								th:selected="${branch.name == intern.get().branch}"></option>-->
 
-					</select></td>
-				</tr>
+<!--					</select></td>-->
+<!--				</tr>-->
 
 				<tr>
 					<th>Domain</th>
