--- a/src/main/resources/templates/admin/register_internn.html
+++ b/src/main/resources/templates/admin/register_internn.html
@@ -81,13 +81,13 @@
                                 <label for="degree">Degree</label>
                             </div>
 
-                            <div class="form-floating">
-                                <select class="form-select" id="branch" name="branch" required>
-                                    <option value="" disabled selected>Select Branch</option>
-                                    <option th:each="branch : ${branches}" th:text="${branch.name}" th:value="${branch.name}"></option>
-                                </select>
-                                <label for="branch">Branch</label>
-                            </div>
+<!--                            <div class="form-floating">-->
+<!--                                <select class="form-select" id="branch" name="branch" required>-->
+<!--                                    <option value="" disabled selected>Select Branch</option>-->
+<!--                                    <option th:each="branch : ${branches}" th:text="${branch.name}" th:value="${branch.name}"></option>-->
+<!--                                </select>-->
+<!--                                <label for="branch">Branch</label>-->
+<!--                            </div>-->
 
                             <div class="form-floating">
                                 <select class="form-select" id="domain" name="domain" required>
