--- a/src/main/resources/templates/intern/intern_dashboard.html
+++ b/src/main/resources/templates/intern/intern_dashboard.html
@@ -171,12 +171,12 @@
                                     <span th:text="${intern.collegeName}"></span>
                                 </div>
                             </div>
-                            <div class="row">
-                                <div class="col-lg-3 col-md-4 label">Branch</div>
-                                <div class="col-lg-9 col-md-8">
-                                    <span th:text="${intern.branch}"></span>
-                                </div>
-                            </div>
+<!--                            <div class="row">-->
+<!--                                <div class="col-lg-3 col-md-4 label">Branch</div>-->
+<!--                                <div class="col-lg-9 col-md-8">-->
+<!--                                    <span th:text="${intern.branch}"></span>-->
+<!--                                </div>-->
+<!--                            </div>-->
                             <div class="row">
                                 <div class="col-lg-3 col-md-4 label">Domain</div>
                                 <div class="col-lg-9 col-md-8">
