--- a/src/main/resources/templates/fragments/asideFragment.html
+++ b/src/main/resources/templates/fragments/asideFragment.html
@@ -33,6 +33,18 @@
             border-radius: 50%;
             margin-left: 5px;
         }
+        .badge-danger {
+            background-color: red;
+            color: white;
+            font-size: 12px;
+            font-weight: bold;
+            border-radius: 50%;
+            padding: 5px 10px;
+            margin-left: 8px;
+            display: inline-block;
+            min-width: 20px;
+            text-align: center;
+        }
     </style>
 
 
@@ -52,22 +64,30 @@
         <li class="nav-item"><a class="nav-link collapsed"
                                 data-bs-target="#interns-components-nav" data-bs-toggle="collapse"
                                 href="#"> <i class="bi bi-menu-button-wide"></i><span>Interns</span>
-            <span class="red-dot" th:if="${approveInternCount > 0}"></span>
-            <span class="red-dot" th:if="${PendingInterviewApplications > 0}"></span>
-            <span class="red-dot" th:if="${pendingCancellationCount > 0}"></span>
+            <span th:if="${notificationCounts['totalInternNotifications'] > 0}"
+                  th:text="${notificationCounts['totalInternNotifications']}"
+                  class="badge badge-danger">
+        </span>
             <i class="bi bi-chevron-down ms-auto"></i>
-        </a>
+         </a>
             <ul id="interns-components-nav" class="nav-content collapse "
                 data-bs-parent="#interns-nav">
                 <li><a th:href="@{/bisag/admin/intern_application}"><i
                         class="bi bi-circle"></i><span>Intern Applications</span>
-                    <span class="red-dot" th:if="${approveInternCount > 0}"></span></a>
+                    <span th:if="${notificationCounts['approveInternCount'] > 0}"
+                          th:text="${notificationCounts['approveInternCount']}"
+                          class="badge badge-danger">
+                    </span></a>
                     </li>
                 <li><a
                         th:href="@{/bisag/admin/intern_application/approved_interns}"><i
                         class="bi bi-circle"></i><span>Shortlisted Intern
 							Applications</span>
-                    <span class="red-dot" th:if="${PendingInterviewApplications > 0}"></span></a></li>
+                    <span th:if="${notificationCounts['pendingInterviewApplications'] > 0}"
+                          th:text="${notificationCounts['pendingInterviewApplications']}"
+                          class="badge badge-danger">
+            </span>
+                </a></li>
                 <li><a th:href="@{/bisag/admin/intern_application/new_interns}"><i
                         class="bi bi-circle"></i><span>Approved Interns</span></a></li>
                 <li><a th:href="@{/bisag/admin/logs}"><i
@@ -82,7 +102,10 @@
                         class="bi bi-circle"></i><span>Add Undertaking</span></a></li>
                 <li><a th:href="@{/bisag/admin/cancellation_requests}"><i
                         class="bi bi-circle"></i><span>Cancellation Requests</span>
-                    <span class="red-dot" th:if="${pendingCancellationCount > 0}"></span></a>
+                    <span th:if="${notificationCounts['pendingCancellationCount'] > 0}"
+                          th:text="${notificationCounts['pendingCancellationCount']}"
+                          class="badge badge-danger">
+            </span></a>
                     </li>
                 <li><a th:href="@{/bisag/admin/feedback_form_list}"><i
                         class="bi bi-circle"></i><span>Feedback Applications</span></a></li>
@@ -128,13 +151,21 @@
                 <li class="nav-item"><a class="nav-link collapsed"
                                         data-bs-target="#preject-def-nav" data-bs-toggle="collapse" href="#">
                     <i class="bi bi-menu-button-wide"></i><span>Project
-					Definition</span><span class="red-dot" th:if="${adminPendingProjectDefinitionCount > 0}"></span><i class="bi bi-chevron-down ms-auto"></i>
+					Definition</span>
+                    <span th:if="${notificationCounts['adminPendingProjectDefinitionCount'] > 0}"
+                          th:text="${notificationCounts['adminPendingProjectDefinitionCount']}"
+                          class="badge badge-danger">
+            </span>
+                    <i class="bi bi-chevron-down ms-auto"></i>
                 </a>
                     <ul id="preject-def-nav" class="nav-content collapse "
                         data-bs-parent="#admin-nav">
                         <li><a th:href="@{/bisag/admin/admin_pending_def_approvals}">
                             <i class="bi bi-circle"></i><span>Pending Definitions</span>
-                            <span class="red-dot" th:if="${adminPendingProjectDefinitionCount > 0}"></span>
+                            <span th:if="${notificationCounts['adminPendingProjectDefinitionCount'] > 0}"
+                                  th:text="${notificationCounts['adminPendingProjectDefinitionCount']}"
+                                  class="badge badge-danger">
+            </span>
                         </a></li>
                         <li><a th:href="@{/bisag/admin/update_project_def}">
                             <i class="bi bi-circle"></i><span>Update Definitions </span>
@@ -213,7 +244,11 @@
                 <li class="nav-item">
                     <a class="nav-link collapsed" data-bs-target="#verification-nav" data-bs-toggle="collapse" href="#">
                         <i class="bi bi-menu-button-wide"></i>
-                        <span>Intern Verification</span><span class="red-dot" th:if="${pendingVerificationCount > 0}"></span>
+                        <span>Intern Verification</span>
+                        <span th:if="${notificationCounts['pendingVerificationCount'] > 0}"
+                              th:text="${notificationCounts['pendingVerificationCount']}"
+                              class="badge badge-danger">
+            </span>
                         <i class="bi bi-chevron-down ms-auto"></i>
                     </a>
                     <ul id="verification-nav" class="nav-content collapse" data-bs-parent="#def-nav">
@@ -227,7 +262,10 @@
                         <li>
                             <a th:href="@{/bisag/admin/verification_requests}">
                                 <i class="bi bi-circle"></i><span>Pending Verification</span>
-                                <span class="red-dot" th:if="${pendingVerificationCount > 0}"></span>
+                                <span th:if="${notificationCounts['pendingVerificationCount'] > 0}"
+                                      th:text="${notificationCounts['pendingVerificationCount']}"
+                                      class="badge badge-danger">
+            </span>
                             </a>
                         </li>
                     </ul>
@@ -294,14 +332,20 @@
                     <a class="nav-link collapsed" data-bs-target="#leave-nav" data-bs-toggle="collapse" href="#">
                         <i class="bi bi-menu-button-wide"></i>
                         <span>Leave Application</span>
-                        <span class="red-dot" th:if="${pendingLeaveCount > 0}"></span>
+                        <span th:if="${notificationCounts['pendingLeaveCount'] > 0}"
+                              th:text="${notificationCounts['pendingLeaveCount']}"
+                              class="badge badge-danger">
+            </span>
                         <i class="bi bi-chevron-down ms-auto"></i>
                     </a>
                     <ul id="leave-nav" class="nav-content collapse" data-bs-parent="#def-nav">
                         <li>
                             <a th:href="@{/bisag/admin/pending_leaves}">
                                 <i class="bi bi-circle"></i><span>Pending Applications</span>
-                                <span class="red-dot" th:if="${pendingLeaveCount > 0}"></span>
+                                <span th:if="${notificationCounts['pendingLeaveCount'] > 0}"
+                                      th:text="${notificationCounts['pendingLeaveCount']}"
+                                      class="badge badge-danger">
+            </span>
                             </a>
                         </li>
                     </ul>
